--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
       <version>24</version>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>24</version>
+    </dependency>
   </dependencies>
 </project>
